# codex-orchestrator

./: .gitignore  AGENTS.md  README.md  environment.yml  project_spec.md  pyproject.toml  updates_checklist.md
.beads/: .gitignore  config.yaml  issues.jsonl
config/: orchestrator.toml  orchestrator.toml.example  repos.toml  repos.toml.example
config/bead_contracts/: BilateralOdorFlowRl.toml  PlaceMemoryRl.toml  autoencoded_vocal_analysis.toml  centerline_prediction_agent_simulation.toml  hippocampal_tda.toml  juvenile_learning_tda.toml  plume_grad_motion.toml
src/codex_orchestrator/: __main__.py  agent_guidance.py  ai_policy.py  audit_trail.py  cli.py  (+24 more)
tests/: conftest.py  test_agent_guidance.py  test_ai_policy.py  test_audit_trail.py  test_beads_subprocess.py  test_cli_smoke.py  test_codex_subprocess.py  test_contract_overlays.py  test_contract_resolution.py  test_current_run_recovery.py  test_env_bootstrap.py  test_git_subprocess.py  test_init_repo_cli.py  test_notebook_refactor_detection.py  test_notebook_refactor_issue_creation.py  test_orchestrator_cycle_maintenance.py  test_orchestrator_cycle_parallelism.py  test_overlay_cli.py  test_planner_gating.py  test_planning_audit_cli.py  test_planning_audit_edge_cases.py  test_planning_audit_heuristics.py  test_planning_audit_issues.py  test_planning_pass_reuse.py  test_repo_execution_gating.py  test_repo_execution_integration.py  test_repo_inventory.py  test_roadtrip_cli.py  test_run_closure_review.py  test_run_info_cli.py  test_run_lifecycle.py  test_run_lock.py  test_run_signoff_cli.py  test_run_signoff_gate.py
