[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-orchestrator"
version = "0.1.0"
description = "Global Codex Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]

[project.scripts]
codex-orchestrator = "codex_orchestrator.cli:main"
codex-status = "codex_orchestrator.status_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
